Project/proj.output
Terminals which are not used

   AND
   OR
   NOT
   EQ
   GEQ
   LEQ
   NEQ
   POW
   LBRACK
   RBRACK


Grammar

    0 $accept: program $end

    1 program: func_list

    2 func_list: func
    3          | func_list func

    4 func: DEF ID LPAREN args RPAREN opt_ret_type COLON body

    5 args: /* empty */
    6     | arg_decl_list

    7 arg_decl_list: param_decl
    8              | param_decl SEMI arg_decl_list

    9 param_decl: type id_list

   10 type: KW_INT
   11     | KW_STRING
   12     | KW_FLOAT
   13     | BOOL

   14 id_list: ID
   15        | ID COMMA id_list

   16 opt_ret_type: /* empty */
   17             | return_type

   18 return_type: ARROW type

   19 body: LESS stmt_list GREATER

   20 block: LESS stmt_list GREATER

   21 suite: block
   22      | stmt

   23 stmt_list: /* empty */
   24          | stmt_list stmt

   25 stmt: if_stmt
   26     | assign_stmt
   27     | return_stmt
   28     | pass_stmt
   29     | while_stmt

   30 if_stmt: IF expr COLON suite
   31        | IF expr COLON suite elif_tail

   32 elif_tail: ELIF expr COLON suite
   33          | ELIF expr COLON suite elif_tail
   34          | ELSE COLON suite

   35 assign_stmt: ID ASSIGN expr DOT

   36 return_stmt: RETURN expr DOT
   37            | RETURN DOT

   38 pass_stmt: PASS DOT

   39 while_stmt: WHILE expr COLON suite

   40 expr: expr PLUS expr
   41     | expr MINUS expr
   42     | expr MUL expr
   43     | expr DIV expr
   44     | INT
   45     | FLOAT
   46     | ID
   47     | STRING
   48     | TRUE
   49     | FALSE
   50     | LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 47
ID (259) 4 14 15 35 46
INT (260) 44
FLOAT (261) 45
IF (262) 30 31
ELSE (263) 34
ELIF (264) 32 33
WHILE (265) 39
RETURN (266) 36 37
AND (267)
OR (268)
NOT (269)
PASS (270) 38
DEF (271) 4
BOOL (272) 13
KW_INT (273) 10
KW_STRING (274) 11
KW_FLOAT (275) 12
EQ (276)
ASSIGN (277) 35
GEQ (278)
LEQ (279)
LESS (280) 19 20
GREATER (281) 19 20
NEQ (282)
PLUS (283) 40
MINUS (284) 41
POW (285)
MUL (286) 42
DIV (287) 43
DOT (288) 35 36 37 38
SEMI (289) 8
COMMA (290) 15
LPAREN (291) 4 50
RPAREN (292) 4 50
LBRACK (293)
RBRACK (294)
ARROW (295) 18
COLON (296) 4 30 31 32 33 34 39
TRUE (297) 48
FALSE (298) 49
LOWER_THAN_ELSE (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
func_list (47)
    on left: 2 3, on right: 1 3
func (48)
    on left: 4, on right: 2 3
args (49)
    on left: 5 6, on right: 4
arg_decl_list (50)
    on left: 7 8, on right: 6 8
param_decl (51)
    on left: 9, on right: 7 8
type (52)
    on left: 10 11 12 13, on right: 9 18
id_list (53)
    on left: 14 15, on right: 9 15
opt_ret_type (54)
    on left: 16 17, on right: 4
return_type (55)
    on left: 18, on right: 17
body (56)
    on left: 19, on right: 4
block (57)
    on left: 20, on right: 21
suite (58)
    on left: 21 22, on right: 30 31 32 33 34 39
stmt_list (59)
    on left: 23 24, on right: 19 20 24
stmt (60)
    on left: 25 26 27 28 29, on right: 22 24
if_stmt (61)
    on left: 30 31, on right: 25
elif_tail (62)
    on left: 32 33 34, on right: 31 33
assign_stmt (63)
    on left: 35, on right: 26
return_stmt (64)
    on left: 36 37, on right: 27
pass_stmt (65)
    on left: 38, on right: 28
while_stmt (66)
    on left: 39, on right: 29
expr (67)
    on left: 40 41 42 43 44 45 46 47 48 49 50, on right: 30 31 32 33
    35 36 39 40 41 42 43 50


state 0

    0 $accept: . program $end

    DEF  shift, and go to state 1

    program    go to state 2
    func_list  go to state 3
    func       go to state 4


state 1

    4 func: DEF . ID LPAREN args RPAREN opt_ret_type COLON body

    ID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: func_list .
    3 func_list: func_list . func

    DEF  shift, and go to state 1

    $default  reduce using rule 1 (program)

    func  go to state 7


state 4

    2 func_list: func .

    $default  reduce using rule 2 (func_list)


state 5

    4 func: DEF ID . LPAREN args RPAREN opt_ret_type COLON body

    LPAREN  shift, and go to state 8


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 func_list: func_list func .

    $default  reduce using rule 3 (func_list)


state 8

    4 func: DEF ID LPAREN . args RPAREN opt_ret_type COLON body

    BOOL       shift, and go to state 9
    KW_INT     shift, and go to state 10
    KW_STRING  shift, and go to state 11
    KW_FLOAT   shift, and go to state 12

    $default  reduce using rule 5 (args)

    args           go to state 13
    arg_decl_list  go to state 14
    param_decl     go to state 15
    type           go to state 16


state 9

   13 type: BOOL .

    $default  reduce using rule 13 (type)


state 10

   10 type: KW_INT .

    $default  reduce using rule 10 (type)


state 11

   11 type: KW_STRING .

    $default  reduce using rule 11 (type)


state 12

   12 type: KW_FLOAT .

    $default  reduce using rule 12 (type)


state 13

    4 func: DEF ID LPAREN args . RPAREN opt_ret_type COLON body

    RPAREN  shift, and go to state 17


state 14

    6 args: arg_decl_list .

    $default  reduce using rule 6 (args)


state 15

    7 arg_decl_list: param_decl .
    8              | param_decl . SEMI arg_decl_list

    SEMI  shift, and go to state 18

    $default  reduce using rule 7 (arg_decl_list)


state 16

    9 param_decl: type . id_list

    ID  shift, and go to state 19

    id_list  go to state 20


state 17

    4 func: DEF ID LPAREN args RPAREN . opt_ret_type COLON body

    ARROW  shift, and go to state 21

    $default  reduce using rule 16 (opt_ret_type)

    opt_ret_type  go to state 22
    return_type   go to state 23


state 18

    8 arg_decl_list: param_decl SEMI . arg_decl_list

    BOOL       shift, and go to state 9
    KW_INT     shift, and go to state 10
    KW_STRING  shift, and go to state 11
    KW_FLOAT   shift, and go to state 12

    arg_decl_list  go to state 24
    param_decl     go to state 15
    type           go to state 16


state 19

   14 id_list: ID .
   15        | ID . COMMA id_list

    COMMA  shift, and go to state 25

    $default  reduce using rule 14 (id_list)


state 20

    9 param_decl: type id_list .

    $default  reduce using rule 9 (param_decl)


state 21

   18 return_type: ARROW . type

    BOOL       shift, and go to state 9
    KW_INT     shift, and go to state 10
    KW_STRING  shift, and go to state 11
    KW_FLOAT   shift, and go to state 12

    type  go to state 26


state 22

    4 func: DEF ID LPAREN args RPAREN opt_ret_type . COLON body

    COLON  shift, and go to state 27


state 23

   17 opt_ret_type: return_type .

    $default  reduce using rule 17 (opt_ret_type)


state 24

    8 arg_decl_list: param_decl SEMI arg_decl_list .

    $default  reduce using rule 8 (arg_decl_list)


state 25

   15 id_list: ID COMMA . id_list

    ID  shift, and go to state 19

    id_list  go to state 28


state 26

   18 return_type: ARROW type .

    $default  reduce using rule 18 (return_type)


state 27

    4 func: DEF ID LPAREN args RPAREN opt_ret_type COLON . body

    LESS  shift, and go to state 29

    body  go to state 30


state 28

   15 id_list: ID COMMA id_list .

    $default  reduce using rule 15 (id_list)


state 29

   19 body: LESS . stmt_list GREATER

    $default  reduce using rule 23 (stmt_list)

    stmt_list  go to state 31


state 30

    4 func: DEF ID LPAREN args RPAREN opt_ret_type COLON body .

    $default  reduce using rule 4 (func)


state 31

   19 body: LESS stmt_list . GREATER
   24 stmt_list: stmt_list . stmt

    ID       shift, and go to state 32
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    PASS     shift, and go to state 36
    GREATER  shift, and go to state 37

    stmt         go to state 38
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 32

   35 assign_stmt: ID . ASSIGN expr DOT

    ASSIGN  shift, and go to state 44


state 33

   30 if_stmt: IF . expr COLON suite
   31        | IF . expr COLON suite elif_tail

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 52


state 34

   39 while_stmt: WHILE . expr COLON suite

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 53


state 35

   36 return_stmt: RETURN . expr DOT
   37            | RETURN . DOT

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    DOT     shift, and go to state 54
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 55


state 36

   38 pass_stmt: PASS . DOT

    DOT  shift, and go to state 56


state 37

   19 body: LESS stmt_list GREATER .

    $default  reduce using rule 19 (body)


state 38

   24 stmt_list: stmt_list stmt .

    $default  reduce using rule 24 (stmt_list)


state 39

   25 stmt: if_stmt .

    $default  reduce using rule 25 (stmt)


state 40

   26 stmt: assign_stmt .

    $default  reduce using rule 26 (stmt)


state 41

   27 stmt: return_stmt .

    $default  reduce using rule 27 (stmt)


state 42

   28 stmt: pass_stmt .

    $default  reduce using rule 28 (stmt)


state 43

   29 stmt: while_stmt .

    $default  reduce using rule 29 (stmt)


state 44

   35 assign_stmt: ID ASSIGN . expr DOT

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 57


state 45

   47 expr: STRING .

    $default  reduce using rule 47 (expr)


state 46

   46 expr: ID .

    $default  reduce using rule 46 (expr)


state 47

   44 expr: INT .

    $default  reduce using rule 44 (expr)


state 48

   45 expr: FLOAT .

    $default  reduce using rule 45 (expr)


state 49

   50 expr: LPAREN . expr RPAREN

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 58


state 50

   48 expr: TRUE .

    $default  reduce using rule 48 (expr)


state 51

   49 expr: FALSE .

    $default  reduce using rule 49 (expr)


state 52

   30 if_stmt: IF expr . COLON suite
   31        | IF expr . COLON suite elif_tail
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    COLON  shift, and go to state 63


state 53

   39 while_stmt: WHILE expr . COLON suite
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    COLON  shift, and go to state 64


state 54

   37 return_stmt: RETURN DOT .

    $default  reduce using rule 37 (return_stmt)


state 55

   36 return_stmt: RETURN expr . DOT
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    DOT    shift, and go to state 65


state 56

   38 pass_stmt: PASS DOT .

    $default  reduce using rule 38 (pass_stmt)


state 57

   35 assign_stmt: ID ASSIGN expr . DOT
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    DOT    shift, and go to state 66


state 58

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   50     | LPAREN expr . RPAREN

    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    MUL     shift, and go to state 61
    DIV     shift, and go to state 62
    RPAREN  shift, and go to state 67


state 59

   40 expr: expr PLUS . expr

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 68


state 60

   41 expr: expr MINUS . expr

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 69


state 61

   42 expr: expr MUL . expr

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 70


state 62

   43 expr: expr DIV . expr

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 71


state 63

   30 if_stmt: IF expr COLON . suite
   31        | IF expr COLON . suite elif_tail

    ID      shift, and go to state 32
    IF      shift, and go to state 33
    WHILE   shift, and go to state 34
    RETURN  shift, and go to state 35
    PASS    shift, and go to state 36
    LESS    shift, and go to state 72

    block        go to state 73
    suite        go to state 74
    stmt         go to state 75
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 64

   39 while_stmt: WHILE expr COLON . suite

    ID      shift, and go to state 32
    IF      shift, and go to state 33
    WHILE   shift, and go to state 34
    RETURN  shift, and go to state 35
    PASS    shift, and go to state 36
    LESS    shift, and go to state 72

    block        go to state 73
    suite        go to state 76
    stmt         go to state 75
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 65

   36 return_stmt: RETURN expr DOT .

    $default  reduce using rule 36 (return_stmt)


state 66

   35 assign_stmt: ID ASSIGN expr DOT .

    $default  reduce using rule 35 (assign_stmt)


state 67

   50 expr: LPAREN expr RPAREN .

    $default  reduce using rule 50 (expr)


state 68

   40 expr: expr . PLUS expr
   40     | expr PLUS expr .
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    MUL  shift, and go to state 61
    DIV  shift, and go to state 62

    $default  reduce using rule 40 (expr)


state 69

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   41     | expr MINUS expr .
   42     | expr . MUL expr
   43     | expr . DIV expr

    MUL  shift, and go to state 61
    DIV  shift, and go to state 62

    $default  reduce using rule 41 (expr)


state 70

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   42     | expr MUL expr .
   43     | expr . DIV expr

    $default  reduce using rule 42 (expr)


state 71

   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr
   43     | expr DIV expr .

    $default  reduce using rule 43 (expr)


state 72

   20 block: LESS . stmt_list GREATER

    $default  reduce using rule 23 (stmt_list)

    stmt_list  go to state 77


state 73

   21 suite: block .

    $default  reduce using rule 21 (suite)


state 74

   30 if_stmt: IF expr COLON suite .
   31        | IF expr COLON suite . elif_tail

    ELSE  shift, and go to state 78
    ELIF  shift, and go to state 79

    $default  reduce using rule 30 (if_stmt)

    elif_tail  go to state 80


state 75

   22 suite: stmt .

    $default  reduce using rule 22 (suite)


state 76

   39 while_stmt: WHILE expr COLON suite .

    $default  reduce using rule 39 (while_stmt)


state 77

   20 block: LESS stmt_list . GREATER
   24 stmt_list: stmt_list . stmt

    ID       shift, and go to state 32
    IF       shift, and go to state 33
    WHILE    shift, and go to state 34
    RETURN   shift, and go to state 35
    PASS     shift, and go to state 36
    GREATER  shift, and go to state 81

    stmt         go to state 38
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 78

   34 elif_tail: ELSE . COLON suite

    COLON  shift, and go to state 82


state 79

   32 elif_tail: ELIF . expr COLON suite
   33          | ELIF . expr COLON suite elif_tail

    STRING  shift, and go to state 45
    ID      shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    LPAREN  shift, and go to state 49
    TRUE    shift, and go to state 50
    FALSE   shift, and go to state 51

    expr  go to state 83


state 80

   31 if_stmt: IF expr COLON suite elif_tail .

    $default  reduce using rule 31 (if_stmt)


state 81

   20 block: LESS stmt_list GREATER .

    $default  reduce using rule 20 (block)


state 82

   34 elif_tail: ELSE COLON . suite

    ID      shift, and go to state 32
    IF      shift, and go to state 33
    WHILE   shift, and go to state 34
    RETURN  shift, and go to state 35
    PASS    shift, and go to state 36
    LESS    shift, and go to state 72

    block        go to state 73
    suite        go to state 84
    stmt         go to state 75
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 83

   32 elif_tail: ELIF expr . COLON suite
   33          | ELIF expr . COLON suite elif_tail
   40 expr: expr . PLUS expr
   41     | expr . MINUS expr
   42     | expr . MUL expr
   43     | expr . DIV expr

    PLUS   shift, and go to state 59
    MINUS  shift, and go to state 60
    MUL    shift, and go to state 61
    DIV    shift, and go to state 62
    COLON  shift, and go to state 85


state 84

   34 elif_tail: ELSE COLON suite .

    $default  reduce using rule 34 (elif_tail)


state 85

   32 elif_tail: ELIF expr COLON . suite
   33          | ELIF expr COLON . suite elif_tail

    ID      shift, and go to state 32
    IF      shift, and go to state 33
    WHILE   shift, and go to state 34
    RETURN  shift, and go to state 35
    PASS    shift, and go to state 36
    LESS    shift, and go to state 72

    block        go to state 73
    suite        go to state 86
    stmt         go to state 75
    if_stmt      go to state 39
    assign_stmt  go to state 40
    return_stmt  go to state 41
    pass_stmt    go to state 42
    while_stmt   go to state 43


state 86

   32 elif_tail: ELIF expr COLON suite .
   33          | ELIF expr COLON suite . elif_tail

    ELSE  shift, and go to state 78
    ELIF  shift, and go to state 79

    $default  reduce using rule 32 (elif_tail)

    elif_tail  go to state 87


state 87

   33 elif_tail: ELIF expr COLON suite elif_tail .

    $default  reduce using rule 33 (elif_tail)
